--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <!-- Metadatos -->
     <meta charset="utf-8">
-    <meta name="author" content="Jane Doe">
-    <meta name="description" content="Portafolio de desarrollo web de Jane Doe">
+    <meta name="author" content="Víctor Figueredo">
+    <meta name="description" content="Portafolio de desarrollo web de Víctor Figueredo">
     <meta name="keywords" content="HTML, CSS, JavaScript, React">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Titulo -->
@@ -66,7 +66,7 @@
     <!-- Sobre mi -->
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
-        <h2 class="seccion-titulo">Conoce a Jane Doe</h2>
+        <h2 class="seccion-titulo">Conoce a Víctor Figueredo</h2>
         <p class="seccion-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. Donec et venenatis nunc, vel hendrerit ex. Vestibulum sapien ipsum, rutrum eget est et, ultricies sagittis urna. In non volutpat est. Vestibulum diam sapien, ultrices et euismod at, ultrices ut odio. Nullam in massa et elit ultrices suscipit. Proin lacinia leo ac posuere placerat.</p>
       </div>
     </section>
@@ -78,8 +78,8 @@
           <!-- Desarrollo Web -->
           <div class="columna col-12 col-md-4">
             <i class="bi bi-laptop"></i>
-            <p class="experiencia-titulo">Desarrollo Web</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
+            <p>Lorem ipsum dolor sit amet, cons            <p class="experiencia-titulo">Desarrollo Web</p>
+ectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
             <div class="badges-contenedor">
               <span class="badge text-bg-primary">HTML</span>
               <span class="badge text-bg-primary">CSS</span>
